# random-feature-classifier

./: .gitignore  README.md  pyproject.toml
.specstory/history/: 2026-03-25_21-13Z-random-feature-classifier-architecture.md  2026-03-25_21-28Z-python-machine-learning-code-search.md  2026-03-25_21-28Z-repository-structure-and-experiment-package-suitability.md  2026-03-26_01-34Z-layerwise-selection-pipeline-analysis.md  2026-03-26_01-34Z-new-output-mode-for-cifar-10-training.md
src/random_feature_classifier/: __init__.py  analyze_features.py  backbones.py  cache.py  config.py  data.py  debug_variance.py  extract_features.py  fisher_select.py  heads.py  layers.py  layerwise_selection.py  model.py  ovr.py  pairwise.py  prng.py  selection.py  train_cifar10.py  train_head.py  train_layerwise_selected.py  train_ovr_refinement.py  train_pairwise_layerwise.py  train_topk_refinement.py
tests/: test_cached_features.py  test_layerwise_selection.py  test_model_shapes.py  test_ovr.py  test_pairwise.py  test_selection.py
